--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.monojit.development.TestBackgroundOps">
-    <uses-sdk android:minSdkVersion="15" />
-    <application android:label="TestBackgroundOps">
-    </application>
+	<uses-sdk android:minSdkVersion="15" />
+	<uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
+	<application android:label="TestBackgroundOps"></application>
 </manifest>
