--- a/Droid/TestBackgroundOps.Droid.csproj
+++ b/Droid/TestBackgroundOps.Droid.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBinderService.cs" />
     <Compile Include="TestIntentService.cs" />
+    <Compile Include="TestForegroundService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
